- [improved] Add "width" property to WFYAHOO_widget_Calendar. Improve layout. So it works more cleanly when laid out inline with other elements.
- [new] Add WFYAHOO_widget_DateTimePicker widget.
- [new] Add WFForm.disableEnterKeySubmit property to optionally (default false) prevent enter-key-submit of forms.
- [new] Add addToEmail() to Mail_Mailer to allow multiple "to" recipients.


Version 0.3.6 - 3/18/2010
- [bugfix] WFYAHOO_widget_TreeViewNode now works properly when there are special characters in the node IDs (/, space, etc). We were missing an encodeUriComponent().
- [new] WFYAHOO_widget_ColorPicker.value is now bindable.
- [new] Added WFArray.valuesForKeyPaths
- [bugfix] WFRPC::rpcFromRequest() now properly handles comparisions of invocation paths with spaces and other url-sensitive characters.
- [new] Get WFYAHOO_widget_Calendar working.
- [new] Add enableToggleButton option to WFYAHOO_widget_AutoComplete that can optionally show a button to show display the AC list when clicked.
- [new] Add optional parameter to WFYAHOO_widget_PhocoaDialog.show() to allow specification of an invocationPath to show. Great for a shared PhocoaDialog used for multiple sub-windows.
- [bugfix] WFYAHOO_widget_PhocoaDialog uses overflow: auto for the content (bd) area.
- [improved] WFYAHOO_widget_PhocoaDialog automatically keeps "context" correct for windowResize, windowScroll, and beforeShow.
- [new] If WFYAHOO_widget_Panel is configured with "modal" and "close" then clicking on the mask is the same as clicking the "close" button.

Version 0.3.5 - 1/28/2010
- [new] Added WFRequestController_HTTPException which takes in a ($msg, $httpCode) which defaults to HTTP 500, internal server exception. This should make it much easier to send arbitrary HTTP codes without having to subclass each one. WFRequestController_HTTPException is *not* emailed through the uncaught exception handler.