@@ -191,6 +191,8 @@ class WFYAHOO_widget_TabView extends WFYAHOO
     // YUI Tab Config Properties
     protected $orientation = NULL;
 
+    protected $hideWhileLoading = false;
+
     /**
       * Constructor.
       */
@@ -252,8 +254,9 @@ class WFYAHOO_widget_TabView extends WFYAHOO
         }
         else
         {
+            $initialStyle = $this->hideWhileLoading ? 'style="display:none;"' : NULL;
             $html = parent::render($blockContent);
-            $html .= "\n<div id=\"{$this->id}\" class=\"yui-navset\">";
+            $html .= "\n<div id=\"{$this->id}\" class=\"yui-navset\" {$initialStyle}>";
             $html .= "\n<ul class=\"yui-nav\">";
             foreach ($this->tabRenderOrder as $tabId => $tab) {
                 $html .= "<li class=\"" . ($this->selectedTabId === $tabId ? ' selected' : NULL) . "\"><a href=\"#" . $tabId . "\"><em>" . $tab->label() . "</em></a></li>";
@@ -277,7 +280,15 @@ class WFYAHOO_widget_TabView extends WFYAHOO
         {
             $html .= "orientation: '{$this->orientation}'";
         }
-        $html .= "});
+        $html .= "});";
+        if ($this->hideWhileLoading)
+        {
+            $html .= "
+            YAHOO.util.Dom.get('{$this->id}').setStyle({ display: 'block' });
+            ";
+        }
+
+        $html .= "
             var tab;
             ";
         // set up individual tabs
